COMPLETE Neo4j n8n Integration Implementation
 MAJOR FEATURES IMPLEMENTED:
- Neo4j community node with full AI Agent integration
- Vector database operations with GigaChat embeddings (2560 dimensions)
- AI Tool mode (retrieve-as-tool) with inline execution
- Manual mode operations (addDocuments, similaritySearch, cypherQuery)
- Comprehensive workflow examples and testing infrastructure

 TECHNICAL COMPONENTS:
- nodes/Neo4j/Neo4j.node.ts - Main node implementation
- credentials/Neo4jApi.credentials.ts - Authentication system
- Docker infrastructure (Neo4j 5.24 + custom n8n build)
- Vector index support with COSINE similarity
- LangChain community integration (@langchain/community 0.3.56)

 TESTING & AUTOMATION:
- Complete workflow examples (AI Agent, vector search, document upload)
- Automated testing scripts and diagnostics
- Performance and integration testing infrastructure
- Comprehensive documentation and guides

 BREAKTHROUGH SOLUTIONS:
- Fixed vector dimension support (2560  4096 capability)
- Resolved AI Agent tool call errors (undefined.call)
- Implemented dual embedding connection architecture
- Solved textNodeProperties configuration (text vs content fields)
- Complete Russian language document support

 CURRENT STATUS: PRODUCTION READY
All core functionality working, ready for deployment and use.

--- a/package.json
+++ b/package.json
@@ -1,19 +1,24 @@
 {
-  "name": "n8n-nodes-<...>",
+  "name": "n8n-nodes-neo4j-extended",
   "version": "0.1.0",
-  "description": "",
+  "description": "n8n community node for Neo4j with vector search, graph database operations, and AI tool integration",
   "keywords": [
-    "n8n-community-node-package"
+    "n8n-community-node-package",
+    "neo4j",
+    "graph-database",
+    "vector-search",
+    "langchain",
+    "ai-tools"
   ],
   "license": "MIT",
-  "homepage": "",
+  "homepage": "https://github.com/VolkovIlia/n8n-nodes-neo4j-extended",
   "author": {
-    "name": "",
-    "email": ""
+    "name": "Ilia Volkov",
+    "email": "ilia@example.com"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/<...>/n8n-nodes-<...>.git"
+    "url": "https://github.com/VolkovIlia/n8n-nodes-neo4j-extended.git"
   },
   "engines": {
     "node": ">=20.15"
@@ -33,12 +38,10 @@
   "n8n": {
     "n8nNodesApiVersion": 1,
     "credentials": [
-      "dist/credentials/ExampleCredentialsApi.credentials.js",
-      "dist/credentials/HttpBinApi.credentials.js"
+      "dist/credentials/Neo4jApi.credentials.js"
     ],
     "nodes": [
-      "dist/nodes/ExampleNode/ExampleNode.node.js",
-      "dist/nodes/HttpBin/HttpBin.node.js"
+      "dist/nodes/Neo4j/Neo4j.node.js"
     ]
   },
   "devDependencies": {
@@ -51,5 +54,10 @@
   },
   "peerDependencies": {
     "n8n-workflow": "*"
+  },
+  "dependencies": {
+    "@langchain/community": "^0.3.56",
+    "axios": "^1.12.2",
+    "neo4j-driver": "^5.28.2"
   }
 }
