chore: Clean repository v1.0.1
 Repository cleanup:
-  Removed all development/testing files
-  Removed automation scripts and reports
-  Removed diagnostics and temporary files
-  Removed test documents and workflows
-  Removed debug markdown files
-  Removed Docker build files
-  Removed Cypher scripts
-  Removed .github and .gitmodules
-  Updated .gitignore for future development
-  Kept only production-ready files

Now repository contains only:
- Core n8n node files (Neo4j.node.ts, neo4j.svg)
- Package configuration (package.json, tsconfig.json)
- Documentation (README.md, LICENSE.md)
- Build configuration (gulpfile.js, .eslintrc.js)
- Main Docker compose for development

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,41 @@ npm-debug.log*
 yarn.lock
 .vscode/launch.json
 .github
+
+# Testing and automation files
+automation/
+test-documents/
+reports/
+*.test.*
+*test*.js
+*test*.mjs
+*test*.json
+
+# Debug and temporary files
+CRITICAL_*.md
+FINAL_*.md
+DEBUG_*.md
+REAL_*.md
+TEST_RESULTS.md
+*-test.json
+*-correct.json
+*-demo.*
+
+# Docker and development files
+docker-compose*.yml
+!docker-compose.yml
+*-simple.yml
+
+# Temporary SVG files
+Logo_*.svg
+
+# Submodules and external repos
+n8n-gigachat/
+*-gigachat/
+
+# Development configs
+mcp-config.json
+*.cypher
+
+# Package locks from subdirectories
+automation/package-lock.json
