--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "n8n-nodes-neo4j-extended",
-  "version": "1.0.2",
-  "description": "n8n community node for Neo4j with vector search, graph database operations, and AI tool integration",
+  "version": "1.1.0",
+  "description": "n8n community node for Neo4j with vector search, graph database operations, AI-powered document processing, and hybrid search capabilities",
   "keywords": [
     "n8n-community-node-package",
     "neo4j",
